--- a/Basic-Playback/app/build.gradle
+++ b/Basic-Playback/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '29.0.3'
     defaultConfig {
         applicationId 'com.theoplayer.sample.playback.basic'
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName '1.0'
@@ -24,9 +24,10 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
     // THEOplayer required dependencies.
-    implementation ':theoplayer@aar'
+    //implementation ':theoplayer@aar'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
